// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword matches snapshot 1`] = `
<div>
  <nav
    class="sc-AxjAm icODTr"
  >
    <h1
      class="sc-AxirZ bosuDb"
    >
      TrackIt
    </h1>
    <div
      class="sc-AxiKw cmYvTE"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Sign Up
      </a>
    </div>
  </nav>
  <div
    class="sc-AxhCb ivLleu"
  >
    <h2
      class="sc-AxhUy JNaYu"
    >
      Reset your password here, 
      <br />
      <span>
        just type your email
      </span>
    </h2>
    <form
      class="sc-AxgMl iZsHBs"
    >
      <div
        class="sc-AxheI fnSDUS"
      >
        <input
          placeholder="Email address"
          type="email"
          value=""
        />
      </div>
      <button
        class="sc-Axmtr lgMnpa"
      >
        Send
      </button>
    </form>
    
  </div>
</div>
`;

exports[`ResetPassword matches snapshot 1`] = `
<div>
  <nav
    class="sc-AxjAm icODTr"
  >
    <h1
      class="sc-AxirZ bosuDb"
    >
      TrackIt
    </h1>
    <div
      class="sc-AxiKw cmYvTE"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Sign Up
      </a>
    </div>
  </nav>
  <div
    class="sc-AxhCb ivLleu"
  >
    <h2
      class="sc-AxhUy JNaYu"
    >
      Set your new password,
      <br />
      <span>
        make it sticky this time
      </span>
    </h2>
    <form
      class="sc-AxgMl iZsHBs"
    >
      <div
        class="sc-AxheI fnSDUS"
      >
        <input
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        class="sc-Axmtr lgMnpa"
      >
        Update
      </button>
    </form>
    
  </div>
</div>
`;

exports[`SignIn matches snapshot 1`] = `
<div>
  <nav
    class="sc-AxjAm icODTr"
  >
    <h1
      class="sc-AxirZ bosuDb"
    >
      TrackIt
    </h1>
    <div
      class="sc-AxiKw cmYvTE"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Sign Up
      </a>
    </div>
  </nav>
  <div
    class="sc-AxhCb ivLleu"
  >
    <h2
      class="sc-AxhUy JNaYu"
    >
      Welcome back, 
      <br />
      <span>
        sign in to continue
      </span>
    </h2>
    <form
      class="sc-AxgMl iZsHBs"
    >
      <div
        class="sc-AxheI fnSDUS"
      >
        <input
          placeholder="Email address"
          type="email"
          value=""
        />
      </div>
      <div
        class="sc-AxheI fnSDUS"
      >
        <div
          class="input-wrapper"
        >
          <input
            placeholder="Password"
            type="password"
            value=""
          />
          <svg>
            eye.svg
          </svg>
        </div>
        <p>
          <a
            href="/forgot"
          >
            Forgot password?
          </a>
        </p>
      </div>
      <button
        class="sc-Axmtr lgMnpa"
      >
        Login
      </button>
    </form>
  </div>
</div>
`;

exports[`SignUp matches snapshot 1`] = `
<div>
  <nav
    class="sc-AxjAm icODTr"
  >
    <h1
      class="sc-AxirZ bosuDb"
    >
      TrackIt
    </h1>
    <div
      class="sc-AxiKw cmYvTE"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Sign Up
      </a>
    </div>
  </nav>
  <div
    class="sc-AxhCb ivLleu"
  >
    <h2
      class="sc-AxhUy JNaYu"
    >
      Hey there, 
      <br />
      <span>
        sign up to continue
      </span>
    </h2>
    <form
      class="sc-AxgMl iZsHBs"
    >
      <div
        class="sc-AxheI fnSDUS"
      >
        <input
          placeholder="Name"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-AxheI fnSDUS"
      >
        <input
          placeholder="Email address"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="sc-AxheI fnSDUS"
      >
        <div
          class="input-wrapper"
        >
          <input
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <svg>
            eye.svg
          </svg>
        </div>
      </div>
      <button
        class="sc-Axmtr lgMnpa"
      >
        Sign Up
      </button>
    </form>
  </div>
</div>
`;
